--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Project</string>
+    <string name="google_maps_key">AIzaSyDmQEpmt7yIUIyGsZKXq9uupJW1aRdwM2o</string>
 </resources>
