Added Forgoto Password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Project</string>
     <string name="google_maps_key">AIzaSyDmQEpmt7yIUIyGsZKXq9uupJW1aRdwM2o</string>
+    <string name="default_web_client_id">292406745942-fau9tad9seoh1jcvlenh4cqev254m14p.apps.googleusercontent.com</string>
 </resources>
